--- a/install
+++ b/install
@@ -1,18 +1,37 @@
 #!/bin/bash
 
-echo "[*] Installing necessary dependencies ..."
-sudo apt-get install curl zsh
-echo "[*] Installing and configuring zsh ..."
-curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh | sh
-sudo usermod --shell $(which zsh) $USER
+. ~/.env
 
-echo "[*] Configuring zsh theme ..."
-[ -f ~/.oh-my-zsh/themes/plain.zsh-theme ] && rm ~/.oh-my-zsh/themes/plain.zsh-theme
-ln -s ~/.dotfiles/themes/plain.zsh-theme ~/.oh-my-zsh/themes/plain.zsh-theme
-echo "[*] Installing zsh plugins ..."
-git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
-git clone https://github.com/zsh-users/zsh-autosuggestions ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions
-echo "[*] Configuring zsh ..."
-[ -f ~/.zshrc ] && rm ~/.zshrc
-ln -s ~/.dotfiles/.zshrc ~/.zshrc
-echo "[*] Install complete."
+if [ $KEY_FILE_NAME ]; then
+  FILE_NAME=$KEY_FILE_NAME
+else
+  read -p "Enter a file name: " FILE_NAME
+fi
+
+PRIVATE_FILE=~/.ssh/$FILE_NAME
+PUBLIC_FILE=$PRIVATE_FILE.pub
+
+[ ! $(pgrep -x ssh-agent) ] && eval $(ssh-agent -s)
+
+if [ ! -f $PRIVATE_FILE ]; then
+  [ ! -d ~/.ssh ] && mkdir .ssh
+  ssh-keygen -t ed25519 -C "pikachurando@pm.me" -f $PRIVATE_FILE -P ""
+  
+  ssh-add $PRIVATE_FILE
+fi
+
+HOST=$(hostname)
+TITLE="$USER@$HOST"
+KEY=$(cat $PUBLIC_FILE)
+
+curl -L \
+  -X POST \
+  -H "Accept: application/vnd.github+json" \
+  -H "Authorization: Bearer $GITHUB_TOKEN" \
+  -H "X-GitHub-Api-Version: 2022-11-28" \
+  https://api.github.com/user/keys \
+  -d "{\"title\":\"$TITLE\", \"key\":\"$KEY\"}"
+
+ln -s ~/.dotfiles/.gitconfig ~/.gitconfig
+
+sh ~/.dotfiles/setup
