--- a/install
+++ b/install
@@ -2,6 +2,8 @@
 
 . ~/.env
 
+sude apt-get install git ssh
+
 if [ $KEY_FILE_NAME ]; then
   FILE_NAME=$KEY_FILE_NAME
 else
@@ -31,6 +33,8 @@ curl -L \
   -H "X-GitHub-Api-Version: 2022-11-28" \
   https://api.github.com/user/keys \
   -d "{\"title\":\"$TITLE\", \"key\":\"$KEY\"}"
+
+git clone git@github.com:Billocap/.dotfiles.git ~/.dotfiles
 
 ln -s ~/.dotfiles/.gitconfig ~/.gitconfig
 
