--- a/install
+++ b/install
@@ -4,23 +4,16 @@
 
 sudo apt install git ssh
 
-if [ $KEY_FILE_NAME ]; then
-  FILE_NAME=$KEY_FILE_NAME
-else
-  read -p "Enter a file name: " FILE_NAME
-fi
+AUTHORIZATION="Authorization: token $GITHUB_TOKEN"
 
-PRIVATE_FILE=~/.ssh/$FILE_NAME
-PUBLIC_FILE=$PRIVATE_FILE.pub
+curl -LO \
+  -H  $AUTHORIZATION \
+  -H "Accept: application/vnd.github.v3.raw" \
+  https://api.github.com/repos/Billocap/.dotfiles/contents/setup-ssh
 
-[ ! $(pgrep -x ssh-agent) ] && eval $(ssh-agent -s)
+bash ~/setup-ssh github
 
-if [ ! -f $PRIVATE_FILE ]; then
-  [ ! -d ~/.ssh ] && mkdir .ssh
-  ssh-keygen -t ed25519 -C "pikachurando@pm.me" -f $PRIVATE_FILE -P ""
-  
-  ssh-add $PRIVATE_FILE
-fi
+. ~/.keys.temp
 
 HOST=$(hostname)
 TITLE="$USER@$HOST"
@@ -29,7 +22,7 @@ KEY=$(cat $PUBLIC_FILE)
 curl -L \
   -X POST \
   -H "Accept: application/vnd.github+json" \
-  -H "Authorization: Bearer $GITHUB_TOKEN" \
+  -H $AUTHORIZATION \
   -H "X-GitHub-Api-Version: 2022-11-28" \
   https://api.github.com/user/keys \
   -d "{\"title\":\"$TITLE\", \"key\":\"$KEY\"}"
@@ -38,4 +31,7 @@ git clone git@github.com:Billocap/.dotfiles.git ~/.dotfiles
 
 ln -s ~/.dotfiles/.gitconfig ~/.gitconfig
 
-sh ~/.dotfiles/setup
+rm ~/.keys.temp
+
+bash ~/.dotfiles/setup
+
