--- a/install
+++ b/install
@@ -7,7 +7,7 @@ sudo apt install git ssh man
 AUTHORIZATION="Authorization: token $GITHUB_TOKEN"
 
 curl -LO \
-  -H  $AUTHORIZATION \
+  -H  "$AUTHORIZATION" \
   -H "Accept: application/vnd.github.v3.raw" \
   https://api.github.com/repos/Billocap/.dotfiles/contents/setup-ssh
 
@@ -22,7 +22,7 @@ KEY=$(cat $PUBLIC_FILE)
 curl -L \
   -X POST \
   -H "Accept: application/vnd.github+json" \
-  -H $AUTHORIZATION \
+  -H "$AUTHORIZATION" \
   -H "X-GitHub-Api-Version: 2022-11-28" \
   https://api.github.com/user/keys \
   -d "{\"title\":\"$TITLE\", \"key\":\"$KEY\"}"
